--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Voucher Printer & QR generator for AdoPiSoft Hotspot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "python $APPDIR/python-scripts/plugin-postinstall.py $(basename \"$PWD\") $(PWD)"
   },
   "repository": {
     "type": "git",
